--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "my-gatsby-site",
+  "name": "landing-page",
   "version": "1.0.0",
   "private": true,
-  "description": "my-gatsby-site",
+  "description": "landing-page",
   "keywords": [
     "gatsby"
   ],
@@ -14,10 +14,15 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "gatsby": "^5.13.2",
+    "gatsby-plugin-google-gtag": "^5.13.1",
     "gatsby-plugin-image": "^3.13.1",
+    "gatsby-plugin-manifest": "^5.13.1",
     "gatsby-plugin-sass": "^6.13.1",
     "gatsby-plugin-sharp": "^5.13.1",
+    "gatsby-plugin-sitemap": "^6.13.1",
+    "gatsby-source-filesystem": "^5.13.1",
     "gatsby-source-wordpress": "^7.13.2",
     "gatsby-transformer-sharp": "^5.13.1",
     "react": "^18.2.0",
